src/test/rustdoc-ui/intra-doc/malformed-generics.stderr
error: unresolved link to `Vec<`
  --> $DIR/malformed-generics.rs:3:6
   |
LL | //! [Vec<]
   |      ^^^^ unbalanced angle brackets
   |
note: the lint level is defined here
  --> $DIR/malformed-generics.rs:1:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unresolved link to `Vec<Box<T`
  --> $DIR/malformed-generics.rs:4:6
   |
LL | //! [Vec<Box<T]
   |      ^^^^^^^^^ unbalanced angle brackets

error: unresolved link to `Vec<Box<T>`
  --> $DIR/malformed-generics.rs:5:6
   |
LL | //! [Vec<Box<T>]
   |      ^^^^^^^^^^ unbalanced angle brackets

error: unresolved link to `Vec<Box<T>>>`
  --> $DIR/malformed-generics.rs:7:6
   |
LL | //! [Vec<Box<T>>>]
   |      ^^^^^^^^^^^^ unbalanced angle brackets

error: unresolved link to `Vec<T>>>`
  --> $DIR/malformed-generics.rs:9:6
   |
LL | //! [Vec<T>>>]
   |      ^^^^^^^^ unbalanced angle brackets

error: unresolved link to `<Vec`
  --> $DIR/malformed-generics.rs:11:6
   |
LL | //! [<Vec]
   |      ^^^^ unbalanced angle brackets

error: unresolved link to `Vec::<`
  --> $DIR/malformed-generics.rs:12:6
   |
LL | //! [Vec::<]
   |      ^^^^^^ unbalanced angle brackets

error: unresolved link to `<T>`
  --> $DIR/malformed-generics.rs:13:6
   |
LL | //! [<T>]
   |      ^^^ missing type for generic parameters

error: unresolved link to `<invalid syntax>`
  --> $DIR/malformed-generics.rs:15:6
   |
LL | //! [<invalid syntax>]
   |      ^^^^^^^^^^^^^^^^ missing type for generic parameters

error: unresolved link to `Vec:<T>:new`
  --> $DIR/malformed-generics.rs:17:6
   |
LL | //! [Vec:<T>:new()]
   |      ^^^^^^^^^^^^^ has invalid path separator

error: unresolved link to `Vec<<T>>`
  --> $DIR/malformed-generics.rs:19:6
   |
LL | //! [Vec<<T>>]
   |      ^^^^^^^^ too many angle brackets

error: unresolved link to `Vec<>`
  --> $DIR/malformed-generics.rs:21:6
   |
LL | //! [Vec<>]
   |      ^^^^^ empty angle brackets

error: unresolved link to `Vec<<>>`
  --> $DIR/malformed-generics.rs:22:6
   |
LL | //! [Vec<<>>]
   |      ^^^^^^^ too many angle brackets

error: unresolved link to `<Vec as IntoIterator>::into_iter`
  --> $DIR/malformed-generics.rs:25:6
   |
LL | //! [<Vec as IntoIterator>::into_iter]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ fully-qualified syntax is unsupported
   |
   = note: see https://github.com/rust-lang/rust/issues/74563 for more information

error: unresolved link to `<Vec<T> as IntoIterator>::iter`
  --> $DIR/malformed-generics.rs:27:6
   |
LL | //! [<Vec<T> as IntoIterator>::iter]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ fully-qualified syntax is unsupported
   |
   = note: see https://github.com/rust-lang/rust/issues/74563 for more information

warning: unclosed HTML tag `T`
  --> $DIR/malformed-generics.rs:5:13
   |
LL | //! [Vec<Box<T>]
   |             ^^^
   |
   = note: `#[warn(rustdoc::invalid_html_tags)]` on by default

warning: unclosed HTML tag `T`
  --> $DIR/malformed-generics.rs:7:13
   |
LL | //! [Vec<Box<T>>>]
   |             ^^^

warning: unclosed HTML tag `T`
  --> $DIR/malformed-generics.rs:9:9
   |
LL | //! [Vec<T>>>]
   |         ^^^

warning: unclosed HTML tag `T`
  --> $DIR/malformed-generics.rs:13:6
   |
LL | //! [<T>]
   |      ^^^

warning: unclosed HTML tag `invalid`
  --> $DIR/malformed-generics.rs:15:6
   |
LL | //! [<invalid syntax>]
   |      ^^^^^^^^

warning: unclosed HTML tag `T`
  --> $DIR/malformed-generics.rs:17:10
   |
LL | //! [Vec:<T>:new()]
   |          ^^^

warning: unclosed HTML tag `T`
  --> $DIR/malformed-generics.rs:19:10
   |
LL | //! [Vec<<T>>]
   |          ^^^

warning: unclosed HTML tag `Vec`
  --> $DIR/malformed-generics.rs:25:6
   |
LL | //! [<Vec as IntoIterator>::into_iter]
   |      ^^^^

warning: unclosed HTML tag `T`
  --> $DIR/malformed-generics.rs:27:10
   |
LL | //! [<Vec<T> as IntoIterator>::iter]
   |          ^^^

error: aborting due to 15 previous errors; 9 warnings emitted

